--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <style>
       @import "./src/style.css";
     </style>
+    <style>
+      @import "./node_modules/c3/c3.min.css";
+    </style>
     <title>JSDev</title>
   </head>
   <body>
-  
+    <div id="chart"></div>
+
     <script type="module">
       import "./src/index.js";
     </script>
